300 feature/notifications (#317)
* adding notifications handlers for sockets and emails

* important fixies to the jobs and bullmq + implementing the order closed notification (email and sockets)

* adding some order handlers

* notification for orders

* adding order compleation

* adding service approved notification

* adding services and notifications

* adding basic routes and docs for the notifications

* adding disputes view

* adding query for the notificaions endpoint

* adding notificaion count to profile
