# src/jobs/processors/notification.handlers/handleComment.js
@@ -1,7 +1,0 @@
-import { infoLogger } from "../../../utils/loggers.js";
-
-async function handleCommentCreated(data) {
-  infoLogger("Comment created notification received", data);
-}
-
-export default handleCommentCreated;
